New changes made today

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -25,11 +25,12 @@
 
                 <div class="form-group emailWrap">
                   <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Email"
-                    [value]="email"
-                    required
+                  type="text"
+                  class="form-control"
+                  placeholder="Email"                 
+                  required
+                  name="email"
+                  [(ngModel)] ="email"
                    
                   >
 
