--- a/src/app/errorhandler/not-found/not-found.component.html
+++ b/src/app/errorhandler/not-found/not-found.component.html
@@ -1,3 +1,13 @@
-<div class="error-handler">
-    <h1>Page Under construction or please check url one more time</h1>
+<div class="col-sm  errorwrap">
+  <div class="errorinner">
+    <div class="text-center"><img src="/assets/img/error.svg"></div>
+    <label></label>
+    The service you requested is unavailable.<br>
+    Please try again.
+
+    <br><br><br><br><br><br>
+  </div>
+
+
 </div>
+
