--- a/src/app/dashboard/claims/claims.component.html
+++ b/src/app/dashboard/claims/claims.component.html
@@ -24,7 +24,7 @@
     <br>
 
     <div class="row claim-arrow">
-      <div class="col-6">
+      <div class="col-md">
         <ul>
           <li>Accidental Damage</li>
           <li>Collapse</li>
@@ -34,7 +34,7 @@
           <li> Wind, Hurricane and Tornado</li>
         </ul>
       </div>
-      <div class="col-6 ">
+      <div class="col-md ">
 
 
         <ul>
