--- a/src/app/dashboard/epp/eppstatic/eppstatic.component.html
+++ b/src/app/dashboard/epp/eppstatic/eppstatic.component.html
@@ -11,19 +11,20 @@
   <!--wraper for FAQ-->
   <div class="db-inner-box col-12 epp eol ">
 
-  <div class="faqWrap">EPP</div>
-<div class="btmBorder"></div>
-<br>
+    <div class="faqWrap">EPP</div>
+    <div class="btmBorder"></div>
+    <br>
 
-    <p class="text-center">The First Data Equipment Protection Program provides FULL REPLACEMENT protection for loss due to a wide variety
+    <p class="text-center">The First Data Equipment Protection Program provides FULL REPLACEMENT protection for loss due
+      to a wide variety
       of perils.</p>
 
-      <div class="btmBorder"></div>
+    <div class="btmBorder"></div>
 
 
     <!--EPP  Covers List Starts-->
     <div class="row ">
-      <div class="col-12 col-sm-6 listWrap ">
+      <div class="col-6 listWrap ">
         <ul>
           <li>
             Accidental Damage
@@ -36,7 +37,7 @@
         </ul>
 
       </div>
-      <div class="col-12 col-sm-6 listWrap">
+      <div class=" col-6  listWrap">
         <ul>
           <li>
             Hail
