--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -1,44 +1,48 @@
-<div class="col-12 land-cnt-01 ">
-  <div class="clearfix"></div>
-  <div class="row rowFix">
-    <div class="col-12 col-md-6 land-cnt-01-inner order-md-last  ">
-
+<div class="row  landStyle">
+  <div class="col-md   order-md-last ">
+    <div class="landtxtwrap rowtwo">
       <h4 class="fd-SubHeading"> Global Leasing - Partner Benefits</h4>
-
       <ul>
-        <li><span>1.</span> <span class="stBld">Quick Funding – </span> 95% of leases processed for funding same day
+        <li><span>1.</span><span class="stBld">Quick Funding – </span>95% of leases processed for funding same day
           through FDGL’s high-performance
           boarding team
         </li>
-        <li><span>2.</span><span class="stBld"> Competitive Funding Rates – </span>lucrative up-front lease funding
+        <li><span>2.</span><span class="stBld">Competitive Funding Rates – </span>lucrative up-front lease funding
           gives you immediate access
           to cash to invest in your business
         </li>
-        <li><span>3.</span><span class="stBld"> Improved Merchant Retention – </span>leases help guard against early
+        <li><span>3.</span><span class="stBld">Improved Merchant Retention – </span>leases help guard against early
           life merchant attrition
         </li>
-        <li><span>4.</span> <span class="stBld">Partner Friendly Tools – </span>online application submission and
+        <li><span>4.</span><span class="stBld">Partner Friendly Tools – </span>online application submission and
           tracking processes as well as
           web-based portfolio reporting tools
         </li>
-        <li><span>5.</span><span class="stBld"> Stability –</span> strength and scale of First Data with dedicated
+        <li><span>5.</span><span class="stBld">Stability –</span>strength and scale of First Data with dedicated
           operations and partner
           management teams
         </li>
-        <li><span>6.</span> <span class="stBld">The highest level of integrity in the industry!</span>
+        <li><span>6.</span><span class="stBld">The highest level of integrity in the industry!</span>
         </li>
 
       </ul>
-
-    </div>
-    <div class="col-12 col-md-6 bg-lightgray ">
-      <div class="col-12 land-img-mx  text-center ">
-        <img class="img-fluid" src="./assets/img/landCntTwo.png">
-      </div>
-
     </div>
   </div>
+  <div class="col-md land-img-mx text-center">
+    <img class="img-fluid" src="./assets/img/landCntTwo.png">
+  </div>
+
 </div>
+<!--Landing page Footer Starts-->
+  <div class="row land-footer ">
+    <div class="col   ">
+      <!--<img class="img-fluid" src="./assets/img/bg-footer.png">-->
+
+    </div>
+
+  </div>
+
+
 
 
 
