--- a/src/app/landing-page/land-hero/land-hero.component.html
+++ b/src/app/landing-page/land-hero/land-hero.component.html
@@ -1,21 +1,23 @@
-<div class="row">
-  <div class="col-12 land-hero  ">
+<div class="row herowrapper ">
+  <div class="col-12 land-hero">
     <div class="row">
       <div class="clearfix">
         <img class="img-fluid btn-block" src="./assets/img/hero.png">
       </div>
-      <div class=" land-hero-cnt h-100 ">
-        <div class="land-hero-cnt-inner">
 
-          <h4 class="fd-Heading text-center">First Data Global Leasing</h4>
-          <br>
-          <p class="norTxt text-center">First Data Global Leasing specializes in providing cost-effective
-            options for
-            leasing of
-            point-of-sale equipment to support your business’s long and short-term needs and goals.</p>
-        </div>
-      </div>
 
+    </div>
+  </div>
+
+  <div class=" land-hero-cnt">
+    <div class="land-hero-cnt-inner">
+      <div class="land-hero-txt-wrap">
+
+        <h4 class="fd-Heading text-center">First Data Global Leasing</h4>
+        <p class="norTxt ">First Data Global Leasing specializes in providing cost-effective
+          options for
+          leasing of
+          point-of-sale equipment to support your business’s long and short-term needs and goals.</p></div>
     </div>
   </div>
 </div>
